Fix that stupid render flicker with new diffing render alg :fire:

--- a/style.css
+++ b/style.css
@@ -756,6 +756,12 @@ input[type=checkbox]:focus {
     align-items: center;
 }
 
+.measuringDiv {
+    position: absolute;
+    left: -9999px;
+    top: -9999px;
+}
+
 .hidden {
     display: none;
 }
